how to brig workload into k8s

--- a/2-k8s-lab/2-create-pod/cronjob.yaml
+++ b/2-k8s-lab/2-create-pod/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: hello-cronjob
 spec:
-  schedule: "*/1 * * * *"  # Runs every 2 minutes
+  schedule: "*/1 * * * *"  # Run every minute
   jobTemplate:
     spec:
       template:
