--- a/2-k8s-lab/2-create-pod/sts.yaml
+++ b/2-k8s-lab/2-create-pod/sts.yaml
@@ -2,36 +2,18 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres
+  name: mongodb-sts
 spec:
-<<<<<<< HEAD
-  serviceName: "postgres"
-  replicas: 3
-=======
   replicas: 2
->>>>>>> 7d6a1ca (schedule pods)
   selector:
     matchLabels:
-      app: postgres
+      app: mongodb
   template:
     metadata:
       labels:
-        app: postgres
+        app: mongodb
     spec:
       containers:
-        - name: postgres
-          image: postgres:13
-          ports:
-            - containerPort: 5432
-          volumeMounts:
-            - name: postgres-storage
-              mountPath: /var/lib/postgresql/data
-  volumeClaimTemplates:
-    - metadata:
-        name: postgres-storage
-      spec:
-        accessModes: [ "ReadWriteOncePod" ]
-        resources:
-          requests:
-            storage: 1Gi
+        - name: mongodb-container
+          image: mongo
 
