how to create & schedule pods

--- a/2-k8s-lab/3-schedule-pod/node-affinity-pod.yaml
+++ b/2-k8s-lab/3-schedule-pod/node-affinity-pod.yaml
@@ -8,9 +8,9 @@ spec:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
         - matchExpressions:
-          - key: disktype
+          - key: city
             operator: In
-            values: ["ssd"]
+            values: ["mumbai","chennai"]
   containers:
   - name: nginx
     image: nginx
