--- a/2-k8s-lab/3-schedule-pod/resource-limits.yaml
+++ b/2-k8s-lab/3-schedule-pod/resource-limits.yaml
@@ -8,8 +8,8 @@ spec:
     image: nginx
     resources:
       requests:
-        cpu: "1"
-        memory: "256Mi"
-      limits:
         cpu: "2"
-        memory: "512Mi"
+        memory: "1Gi"
+      limits:
+        cpu: "10"
+        memory: "2Gi"
