--- a/2-k8s-lab/3-schedule-pod/taint-toleration-pod.yaml
+++ b/2-k8s-lab/3-schedule-pod/taint-toleration-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: taint-toleration-pod
 spec:
   tolerations:
-  - key: "trainee"
+  - key: "npci"
     operator: "Equal"
     value: "true"
     effect: "NoSchedule"
