--- a/2-k8s-lab/3-schedule-pod/pod-anti-affinity-pod.yaml
+++ b/2-k8s-lab/3-schedule-pod/pod-anti-affinity-pod.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  nodeName: my-k8s-cluster-worker
+  nodeName: kind-cluster-worker
   containers:
   - name: nginx
     image: nginx
@@ -22,7 +22,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  nodeName: my-k8s-cluster-worker2
+  nodeName: kind-cluster-worker2
   containers:
   - name: nginx
     image: nginx
@@ -37,7 +37,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  nodeName: my-k8s-cluster-worker3
+  nodeName: kind-cluster-worker3
   containers:
   - name: nginx
     image: nginx
